# moe-stream

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: CLI.md  CUDA_PORTING_GUIDE.md  GPU_AUTO_SELECT.md  STREAMING_ENGINE.md  TECHNOLOGY.md
moe-stream-core/: Cargo.toml
moe-stream-core/examples/: full_compare.rs  generate.rs  test_autograd.rs  test_metal.rs  verify_gguf.rs
moe-stream-core/src/: chat_template.rs  config.rs  lib.rs  tokenizer.rs
moe-stream-core/src/gguf/: dequant.rs  mod.rs  name_map.rs  reader.rs
moe-stream-core/src/metal/: fused_ops.metal  mod.rs  mxfp4.metal  quantized_attn.metal
moe-stream-core/src/model/: cache.rs  deltanet.rs  engine.rs  kv_cache.rs  layer.rs  mod.rs  train.rs
moe-stream-core/src/ops/: activation.rs  attention.rs  mod.rs  norm.rs
moe-stream-server/: Cargo.toml
moe-stream-server/src/: engine_handle.rs  main.rs  types.rs
moe-stream-server/src/mcp/: tools.rs
moe-stream-server/src/routes/: chat_completions.rs  health.rs  mod.rs  models.rs
